# CC7515-GPU

tarea_1/: .gitignore  CMakeLists.txt  README.md  main.cpp
tarea_1/include/Point/: point.hpp
tarea_1/include/Polygon/: polygon.hpp
tarea_1/include/Vector/: vector.hpp
tarea_1/test/: CMakeLists.txt  point_test.cpp  polygon_test.cpp  vector_test.cpp
tarea_3/: README.md  index.html  main.js  package-lock.json
